Setup premier service with database connections. Testing when application is started

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=valorant-premier-bot
+spring.config.import=optional:configserver:https://config.bjoggis.com
+spring.cloud.config.label=master
