--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ ubuntu-latest, self-hosted ]
     runs-on: ${{ matrix.os }}
     permissions:
       contents: read
@@ -18,9 +18,21 @@ jobs:
       - name: Setup Maven Action
         uses: s4u/setup-maven-action@v1.12.0
         with:
-          java-version: 21
+          java-version: 22
           java-distribution: liberica
           checkout-persist-credentials: true
+          cache-enabled: false
+          settings-servers: |
+            [{
+                "id": "reposilite-releases",
+                "username": "${{ secrets.REPOSILITE_USERNAME }}",
+                "password": "${{ secrets.REPOSILITE_PASSWORD }}"
+            },
+            {
+                "id": "reposilite-snapshots",
+                "username": "${{ secrets.REPOSILITE_USERNAME }}",
+                "password": "${{ secrets.REPOSILITE_PASSWORD }}"
+            }]
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
@@ -43,7 +55,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: create-manifest
         run: |
-          docker manifest create bjoggis/valorant-premier-bot:v0.0.0 --amend bjoggis/valorant-premier-bot:v0.0.0-x86_64
+          docker manifest create bjoggis/valorant-premier-bot:v0.0.0 --amend bjoggis/valorant-premier-bot:v0.0.0-x86_64 --amend bjoggis/valorant-premier-bot:v0.0.0-aarch_64
           docker manifest push bjoggis/valorant-premier-bot:v0.0.0
-          docker manifest create bjoggis/valorant-premier-bot:latest --amend bjoggis/valorant-premier-bot:v0.0.0-x86_64
+          docker manifest create bjoggis/valorant-premier-bot:latest --amend bjoggis/valorant-premier-bot:v0.0.0-x86_64 --amend bjoggis/valorant-premier-bot:v0.0.0-aarch_64
           docker manifest push bjoggis/valorant-premier-bot:latest
