--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.5</version>
+    <version>3.3.1</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>no.jonasandersen</groupId>
@@ -14,8 +14,8 @@
   <name>valorant-premier-bot</name>
   <description>valorant-premier-bot</description>
   <properties>
-    <java.version>21</java.version>
-    <spring-cloud.version>2023.0.1</spring-cloud.version>
+    <java.version>22</java.version>
+    <spring-cloud.version>2023.0.3</spring-cloud.version>
   </properties>
   <dependencies>
     <dependency>
@@ -106,13 +106,55 @@
         </executions>
         <configuration>
           <image>
-            <builder>dashaun/builder:tiny</builder>
-            <name>bjoggis/${project.artifactId}:v${project.version}-${os.detected.arch}
-            </name>
+            <builder>paketobuildpacks/builder-jammy-buildpackless-tiny</builder>
+            <name>bjoggis/${project.artifactId}:v${project.version}-${os.detected.arch}</name>
+            <buildpacks>
+              <buildpack>paketobuildpacks/java</buildpack>
+            </buildpacks>
+            <env>
+              <BP_JVM_VERSION>22</BP_JVM_VERSION>
+            </env>
           </image>
         </configuration>
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>reposilite-releases</id>
+      <name>Reposilite Releases</name>
+      <url>https://maven.bjoggis.com/releases</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+    <repository>
+      <id>reposilite-snapshots</id>
+      <name>Reposilite Snapshots</name>
+      <url>https://maven.bjoggis.com/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+  <distributionManagement>
+    <repository>
+      <id>reposilite-releases</id>
+      <name>Reposilite Releases</name>
+      <url>https://maven.bjoggis.com/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>reposilite-snapshots</id>
+      <name>Reposilite Snapshots</name>
+      <url>https://maven.bjoggis.com/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
 </project>
