--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=valorant-premier-bot
 spring.config.import=optional:configserver:https://config.bjoggis.com
+spring.threads.virtual.enabled=true
 spring.cloud.config.label=master
